--- a/R/p51_GAP_ML_Train_2way_Feature_select_Top_19_04_2017.Rmd
+++ b/R/p51_GAP_ML_Train_2way_Feature_select_Top_19_04_2017.Rmd
@@ -135,7 +135,7 @@ project_id = "p51_"
 
 load(file=paste(data_dejong_dir,"Dejong_reduced_Gx_data_and_pheno.RData",sep=""))
 load(file=paste(data_dir,"GX_DF_adj_data.Rdata",sep=""))
-Genesets_HD<-read.csv(paste(data_dir0,"GeneSetsMental_Pirooznia_2016.csv",sep=""))
+#Genesets_HD<-read.csv(paste(data_dir0,"GeneSetsMental_Pirooznia_2016.csv",sep=""))
 
 
 
@@ -179,7 +179,7 @@ cor_fun<- function(gene_exprs_DF,cor_cutoff=0.8) {
 #ONLY KEEP PHENOTYPE
 Gx_DF_1_locHS[1:10,1:10]
 #find highly correlated probes set to 80 by default.
-highlyCorrelated<-cor_fun(Gx_DF_1_locHS[,-c(1)],cor_cutoff=0.8)
+highlyCorrelated<-cor_fun(Gx_DF_1_locHS[,-c(1)],cor_cutoff=0.75)
 highlyCorrelated
 
 
@@ -190,29 +190,26 @@ dim(Gx_DF_1_locHS)
 
 
 #Low Variance Probes removed
-cor_fun<- function(gene_exprs_DF,cor_cutoff=0.8) {
-  # find highly correlated probes
-  correlationMatrix <- cor(gene_exprs_DF)
-  # find attributes that are highly corrected (ideally >0.75)
-  findCorrelation(correlationMatrix, cutoff=cor_cutoff)
-
-}
-
-num<-Gx_DF_2_cor[,4]
-var(num, y = NULL, na.rm = FALSE, use = "everything")
-var(Gx_DF_2_cor[1:10,2:4], y = NULL, na.rm = FALSE, use = "everything")
-
 Gx_vars<-apply(Gx_DF_2_cor[,c(-1)], 2, function(x) var(x,))
 Gx_vars_quant<-quantile(Gx_vars, c(.1,.2,.3,.4,.5))
 Gx_vars_names<-names(which(Gx_vars > Gx_vars_quant[2]))
 Gx_DF_3_var<-Gx_DF_2_cor[,c("Phenotype",Gx_vars_names)]
 
+dim(Gx_DF_1_locHS)
+dim(Gx_DF_2_cor)
+dim(Gx_DF_3_var)
 
+#Diff expression List
+
+
+
+
+
+
+### Other
 PGC_SCZ<-filter(Genesets_HD, Eclass=="PGC_SCZ")
 final_SCZ_probes<-Gx_DF_1_locHS[c(TRUE,colnames(Gx_DF_1_locHS)%in%PGC_SCZ$Gene_names)]
-#Diff expression List
 dim(final_SCZ_probes)
-
 
 
 ```
@@ -353,30 +350,15 @@ save(List_of_models, file=paste(output_dir,project_id,project_name,Sub_prefix,"_
 ```{r Machine Learning}
 
 #Control for algorithms
-control <- trainControl(method="repeatedcv", number=5, repeats=3, sampling="down", savePredictions="final") ## Steve added sampling argument. READ!!
+control <- trainControl(method="repeatedcv", number=5, repeats=3, sampling="up", savePredictions="final") ## Steve added sampling argument. READ!!
 #For saving files. 
 Sub_prefix = "_R3_"
 input_data=Gx_DF_3_var
 dim(input_data)
-#modelID<-c("lda","glm","gbm","glmnet","nb","knn","svmLinear2","svmPoly","svmRadial","rf","C5.0","parRF","elm","nnet","avNNet","pcaNNet","AdaBag","AdaBoost.M1")
-modelID<-c("lda","glm","gbm","glmnet","nb","knn","svmRadial","rf","C5.0","elm","pcaNNet")
+modelID<-c("lda","glm","rf","glmnet","nb","knn","svmRadial","C5.0","gbm","elm","pcaNNet","svmLinear2","svmPoly","avNNet","parRF","nnet","AdaBag","AdaBoost.M1")
+#modelID<-c("glmnet","knn","rf")
 
-modelID<-c("lda","glm","gbm","glmnet","nb","knn","svmRadial","rf","C5.0","elm","pcaNNet")
-x=1
-List_of_models_tune<-list()
-List_of_models_tune[[modelID[x]]]<-"NA: Probable error"
-List_of_models_tune[[modelID[x]]]<- train(Phenotype~., data=input_data, method=modelID[x], metric=metric, preProc=c("center", "scale"),tuneLength = 10, trControl=control)
-print(List_of_models_tune[[modelID[x]]])
-x=x+1
-List_of_models_tune[[modelID[x]]]<-"NA: Probable error"
-List_of_models_tune[[modelID[x]]]<- train(Phenotype~., data=input_data, method=modelID[x], metric=metric, preProc=c("center", "scale"),tuneLength = 10, trControl=control)
-print(List_of_models_tune[[modelID[x]]])
-x=x+1
-List_of_models_tune[[modelID[x]]]<-"NA: Probable error"
-List_of_models_tune[[modelID[x]]]<- train(Phenotype~., data=input_data, method=modelID[x], metric=metric, preProc=c("center", "scale"),tuneLength = 10, trControl=control)
-print(List_of_models_tune[[modelID[x]]])
-
-
+tuneLengthVar=10
 
 
 #Machine Learning
@@ -386,7 +368,7 @@ for(i in 1:length(modelID)){
     print(modelID[i])
     List_of_models[[modelID[i]]]<-"NA: Probable error"
     set.seed(seed)
-    List_of_models[[modelID[i]]] <- train(Phenotype~., data=input_data, method=modelID[i], metric=metric, preProc=c("center", "scale"), trControl=control)
+    List_of_models[[modelID[i]]] <- train(Phenotype~., data=input_data, method=modelID[i], metric=metric, preProc=c("center", "scale"),tuneLength = tuneLengthVar, trControl=control)
     print(List_of_models[[modelID[i]]])
     temp<-List_of_models[[modelID[i]]]
     save(temp, file=paste(output_dir,project_id,project_name,Sub_prefix,"_",modelID[i],".rdata",sep=""), compress = T)    
@@ -413,7 +395,7 @@ dim(input_data)
 #modelID<-c("lda","glm","gbm","glmnet","nb","knn","svmLinear2","svmPoly","svmRadial","rf","C5.0","parRF","elm","nnet","avNNet","pcaNNet","AdaBag","AdaBoost.M1")
 modelID<-c("lda","glm","gbm","glmnet","nb","knn","svmRadial","rf","C5.0","elm","pcaNNet")
 
-
+?trainControl
 
 #Machine Learning
 List_of_models<-list()
@@ -435,9 +417,11 @@ save(List_of_models, file=paste(output_dir,project_id,project_name,Sub_prefix,"_
 ```
 
 
-# Randomized labels. 
+# Randomized labels. and ROC RSME testing.
 ```{r Plotting of results}
 
+
+#Ranom labels
 List_of_DFs<-list()
 randomN<-c(1:10)
 for (R in 1:10) {
@@ -446,6 +430,7 @@ for (R in 1:10) {
   input_data_R[,1]<-sample(input_data[,1])
   List_of_DFs[[R]]<-input_data_R
 }
+
 
 
 List_of_DFs[[R]]
@@ -458,7 +443,30 @@ for(i in 1:length(modelID)){
     print(modelID[i])
     List_of_models2[[modelID[i]]]<-"NA: Probable error"
     set.seed(seed)
-    List_of_models2[[modelID[i]]] <- train(Phenotype~., data=List_of_DFs[[RNum]], method=modelID[i], metric=metric, preProc=c("center", "scale"), trControl=control)
+    List_of_models2[[modelID[i]]] <- train(Phenotype~., data=List_of_DFs[[RNum]], method=modelID[i], metric=metric, preProc=c("center", "scale"), trControl=my_control)
+    print(List_of_models2[[modelID[i]]])
+  }, 
+  error=function(e){cat("ERROR :",conditionMessage(e), "\n")})
+}
+
+modelID<-c("lda","glm","gbm","glmnet","nb","knn","svmRadial","rf","C5.0","elm","pcaNNet")
+#Metrics
+my_control <- trainControl(method="repeatedcv", number=5, repeats=2, sampling="down",classProbs = TRUE,summaryFunction=twoClassSummary,savePredictions="final")
+#my_control <- trainControl(method="repeatedcv", number=5, repeats=2, sampling="down",classProbs = FALSE,summaryFunction=twoClassSummary,savePredictions="final")
+#Metric2 = "RSME"
+#Metric2 = "AUC"
+Metric2 = "Accuracy"
+
+
+input_data_test<-input_data[1:100,1:50]
+
+List_of_models2<-list()
+for(i in 1:length(modelID)){
+  tryCatch({
+    print(modelID[i])
+    List_of_models2[[modelID[i]]]<-"NA: Probable error"
+    set.seed(seed)
+    List_of_models2[[modelID[i]]] <- train(Phenotype~., data=input_data_test, method=modelID[i], metric=Metric2, preProc=c("center", "scale"), trControl=my_control)
     print(List_of_models2[[modelID[i]]])
   }, 
   error=function(e){cat("ERROR :",conditionMessage(e), "\n")})
@@ -466,12 +474,18 @@ for(i in 1:length(modelID)){
 
 
 
+RSME_list
+AUC_list
+Accuracy_list
+
+
 ```
 
 
 
-# Machine Learning
+# Machine Learning Test
 ```{r Machine Learning}
+
 
 
 modelID<-c("lda","glm","gbm","glmnet","nb","knn","svmLinear2","svmPoly","svmRadial","rf","C5.0","parRF","elm","pcaNNet")
@@ -495,87 +509,6 @@ save(List_of_models, file=paste(output_dir,project_id,project_name,"_all_models"
 
 ```
 
-
-
-
-# Other
-```{r other}
-
-#GLMNET MODELS
-modellist<-list(lda=fit.lda, logistic=fit.glm, glmnet=fit.glmnet,svmRad=fit.svmRadial,svmPoly=fit.svmPoly,svmLinear=fit.svmLinear, knn=fit.knn, nb=fit.nb,c50=fit.c50, rf=fit.rf, gbm=fit.gbm)
-##### Model 1
-ModelNum=2
-set.seed(seed)
-glmnet_1_Gx <- train(Phenotype~., data=Gx_DF_input[,1:300], method=modelID[ModelNum], metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-#save(glmnet_1_Gx, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-Gx_DF_input[1:10,1:10]
-
-
-##### Model 2
-ModelNum=2
-set.seed(seed)
-glmnet_2_GxS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_2_GxS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 3
-ModelNum=3
-set.seed(seed)
-glmnet_3_PRS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glm", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_3_PRS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 4
-ModelNum=4
-set.seed(seed)
-glmnet_4_Dem <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_4_Dem, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-
-##### Model 5
-ModelNum= 5
-set.seed(seed)
-glmnet_5_PrsD <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_5_PrsD, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 6
-ModelNum=6
-set.seed(seed)
-glmnet_6_Gx_PRS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_6_Gx_PRS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 7
-ModelNum=7
-set.seed(seed)
-glmnet_7_Gx_dem <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_7_Gx_dem, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 8
-ModelNum=8
-set.seed(seed)
-glmnet_8_Gx_d_prs <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_8_Gx_d_prs, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-
-
-##### Load all saved models
-for (ModelNum in 1:8){
-  load(file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""))  
-}
-
-
-##### Make list of all and save
-glmnet_models<-list(Gx = glmnet_1_Gx, Gx_Scz = glmnet_2_GxS, PRS = glmnet_3_PRS, Dem = glmnet_4_Dem, PRS_Dem = glmnet_5_PrsD, Gx_PRS = glmnet_6_Gx_PRS,  Gx_Dem = glmnet_7_Gx_dem,  Gx_Dem_PRS = glmnet_8_Gx_d_prs)
-save(glmnet_models, file=paste(output_dir,project_id,project_name,"_all_models",".rdata",sep=""), compress = T)
-
-```
 
 ######Below Here is Just reference. DO not run. ################################################################################################################
 
@@ -659,607 +592,3 @@ modelID<-c("1_Gx","2_Gx_Scz","3_PRS","4_Demographics","5_PRS_Demo","6_Gx_PRS","7
 ```
 
 
-
-#Configure
-```{r Define Cores and Seed}
-
-#Allow 8 Cores
-registerDoMC(cores = 8) 
-
-set.seed(seed)
-#Control for algorithms, Bootstrapping, 10k = ~3 hours 8 cores 5k predictors 280 samples.
-control <- trainControl(method="boot", number=10000, savePredictions="all") ## Steve added sampling argument. READ!!
-
-
-#Define Metric to choose best model
-metric <- "Accuracy"
-
-```
-
-
-# Machine Learning
-```{r Ml}
-#GLMNET MODELS
-
-##### Model 1
-ModelNum=1
-set.seed(seed)
-glmnet_1_Gx <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_1_Gx, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 2
-ModelNum=2
-set.seed(seed)
-glmnet_2_GxS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_2_GxS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 3
-ModelNum=3
-set.seed(seed)
-glmnet_3_PRS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glm", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_3_PRS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 4
-ModelNum=4
-set.seed(seed)
-glmnet_4_Dem <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_4_Dem, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-
-##### Model 5
-ModelNum= 5
-set.seed(seed)
-glmnet_5_PrsD <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_5_PrsD, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 6
-ModelNum=6
-set.seed(seed)
-glmnet_6_Gx_PRS <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_6_Gx_PRS, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 7
-ModelNum=7
-set.seed(seed)
-glmnet_7_Gx_dem <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_7_Gx_dem, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-##### Model 8
-ModelNum=8
-set.seed(seed)
-glmnet_8_Gx_d_prs <- train(Phenotype~., data=predictorlists[[ModelNum]], method="glmnet", metric=metric, preProc=c("center", "scale"), trControl=control) 
-#Save Models
-save(glmnet_8_Gx_d_prs, file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""), compress = T)
-
-
-
-##### Load all saved models
-for (ModelNum in 1:8){
-  load(file=paste(output_dir,project_id,project_name,modelID[ModelNum],".rdata",sep=""))  
-}
-
-
-##### Make list of all and save
-glmnet_models<-list(Gx = glmnet_1_Gx, Gx_Scz = glmnet_2_GxS, PRS = glmnet_3_PRS, Dem = glmnet_4_Dem, PRS_Dem = glmnet_5_PrsD, Gx_PRS = glmnet_6_Gx_PRS,  Gx_Dem = glmnet_7_Gx_dem,  Gx_Dem_PRS = glmnet_8_Gx_d_prs)
-save(glmnet_models, file=paste(output_dir,project_id,project_name,"_all_models",".rdata",sep=""), compress = T)
-
-```
-
-
-
-
-## Check most important variables for models and plot tables
-```{r}
-load(file=paste(output_dir,project_id,project_name,"_all_models",".rdata",sep=""))
-
-
-
-#Create loop to get Var imp and metrics
-#Define List
-glm_var_list<-NULL
-#loop through models
-for (ModelNum in 1:8){
-  model_name<-modelID[ModelNum]
-  glmvarimp<-varImp(  glmnet_models[[ModelNum]], scale = FALSE)
-  glmvariables<-glmvarimp$importance
-  glmvariables$Variables<-rownames(glmvariables)
-  glmvariables$Model<-model_name
-  glmvariables<-filter(glmvariables,Overall !=0)
-  glmvariables<-arrange(glmvariables,desc(Overall))
-  #colnames(glmvariables)<-c(model_name,"Variable")
-  glm_var_list <- rbind(glm_var_list,glmvariables)
-}
-glm_var_list
-
-write.csv(glm_var_list, file=paste(output_dir,project_id,project_name,"_glmnet_all_mod_predictors.csv",sep=""),row.names=F,quote=FALSE) #save variables
-
-##Create loop to get metrics
-#Resamples
-ml_resample<-resamples(glmnet_models)
-
-#Save Mean for final models
-ml_resample_means<-sapply(ml_resample$values[,-1],mean)
-Accuracy_index<-grep("*Accuracy",names(ml_resample_means))
-Glmnet_metric_means<-as.data.frame(cbind(ml_resample_means[Accuracy_index],ml_resample_means[-Accuracy_index]))
-#change col and rownames
-colnames(Glmnet_metric_means)<-c("Accuracy","Kappa")
-Glmnet_metric_means$Model<-modelID
-#save
-write.csv(Glmnet_metric_means[,c(3,1,2)], file=paste(output_dir,project_id,project_name,"_glmnet_all_mod_metrics.csv",sep=""),row.names=F,quote=FALSE)
-
-
-#Define Metrics
-use_metrics<-c("Accuracy","Kappa")
-
-#For loop
-for (pMetric in use_metrics){
-  
-  #Print Metric to make sure okay.
-  print(pMetric)
-  
-  #Subset to Metric using grep
-  Metric_grep = paste("*",pMetric,sep="") # define grep
-  metric_results<-ml_resample$values[,grep(Metric_grep,colnames(ml_resample$values))] # grep subset
-  names(metric_results)
-  
-  # Change model names. BE CAREFUL HERE!!!! THIS IS BASED ON ON A PREDEFINED LIST. IF YOU ARE UNSURE SWITCH TO THE FIRS LINE BELOW!!!!!
-  #names(Accuracy_results)<-unlist(strsplit(x=names(Accuracy_results), split=".Accuracy",)) #use this if unsure. 
-  names(metric_results)<-modelID # modelID !!!! BE CAREFUL !!!!
-
-  #Sort models by metric
-  metric_plot<-metric_results[,row.names(as.matrix(sort(sapply(metric_results,mean),decreasing = F)))]
-  #add dataset name
-  metric_plot$Datasets<-c("Glmnet_GAP")
-  #Melt for ggplot
-  metric_plot2<-melt(metric_plot, id="Datasets")  
-  #Change colnames
-  colnames(metric_plot2)<-c("GeneLists","Model",pMetric)
-
-  #Boxplots
-  title=paste(pMetric, "of 10k Bootstrap Glmnet Models in GAP",sep=" ")
-  ggplot(metric_plot2,
-    aes_string(x="Model",y=pMetric, colour = "Model")) +
-    #geom_point() + 
-    geom_boxplot(notch=T)+
-    coord_flip()+
-    ggtitle(title)
-  ggsave(paste(figs_dir,project_id,project_name,"_",pMetric,"_boxplot.png",sep=""))
-}
-
-
-
-```
-
-# Missclassification Functions
-```{r missclassificationFunctions }
-#Function 1: extract data
-data_get_fun <-function(list_models,names_models){
-  outputlist<- list() #define emptylist 
-  #For loop start
-  for (Mod_Num in 1:length(list_models)){
-    tempMod<-list_models[[Mod_Num]]
-    tempModname <- paste("DF",names_models[Mod_Num],sep="_")
-    
-    #Check if glmnet
-    if (tempMod$method == "glmnet"){
-      tempHP<-tempMod$bestTune
-      tempDF<-tempMod$pred
-      tempDF<-filter(tempDF, alpha == tempHP[,"alpha"]  & lambda == tempHP[,"lambda"])
-      #tempDF$sampleID <- #add sampleID column to tempDF  
-      
-      #check else if GLM
-    } else if (tempMod$method == "glm"){
-      tempDF<-tempMod$pred
-      #tempDF$sampleID <- #add sampleID column to tempDF  
-    } #else #error if not glm or glmnet
-      #print ("WARNING: input not recognised as caret glmnet or glm object")
-      #tempDF<-NA
-  
-    #add to output list 
-    outputlist[[tempModname]] <- tempDF #add tempDF to list
-  
-  } #end bracket for loop
-  #return full output
-  return(outputlist)
-} #end bracket function 
-
-
-
-## Table function 1 demographics
-table_dem_fun<-function(pdata,table_name,stratify,listVars,catVars){
-  table1 <- CreateTableOne(vars = listVars, data = pdata, factorVars = catVars,strata=c(stratify),includeNA = T)
-  table1print<-print(table1)
-  table1print<-table1print[,-length(names(data.frame(table1print)))]
-  #write.csv(table1print, file=paste(P0_output_dir,"no_latex_",table_name,sep=""),row.names = TRUE, col.names = TRUE,quote=FALSE,sep = ",")
-  #write.csv(stargazer(table1print,summary=FALSE), file=paste(P0_output_dir,"latex_",table_name,sep=""),row.names=F,col.names = F,sep="")
-}
-
-
-```
-
-
-# Missclassification
-```{r misclassification calculations}
-
-##### Set up #####
-#project name defined
-project_name = "glmnet_missclass"
-#Gene expression data to use. 
-GX_data<-GX_DF_adj[1:27]
-
-#Function to get dataframes
-output_dfs<-data_get_fun(glmnet_models,modelID)
-
-
-#Get Prediction boolean.
-for (df_Num in 1:length(output_dfs)){  
-  output_dfs[[df_Num]]<-mutate(output_dfs[[df_Num]], Prediction = pred == obs)  
-}
-save(output_dfs, file=paste(output_dir,project_id,project_name,"List_of_DFs_bool.rdata",sep=""), compress = T)
-
-#Dataframe to add misclassification.
-PhenoMC_Data<-GX_data
-#Get percentages for each rowIndex and add to dataframe.
-for (df_Num in 1:length(output_dfs)){  
-  temp_percent<-output_dfs[[df_Num]] %>% group_by(rowIndex) %>% summarise(avg=mean(Prediction))
-  #colnames(temp_percent)[2]<-names(output_dfs)[df_Num]
-  colnames(temp_percent)[2]<-paste("Acc",modelID[df_Num],sep="_")
-  PhenoMC_Data<-cbind(PhenoMC_Data,temp_percent[,2])
-}
-
-#Save output
-write.csv(PhenoMC_Data, file=paste(output_dir,project_id,project_name,"_Sample_Percent_accuracy.csv",sep=""),row.names=F,quote=FALSE)
-PhenoMC_Data<-read.csv(paste(output_dir,project_id,project_name,"_Sample_Percent_accuracy.csv",sep=""))
-
-str(PhenoMC_Data)
-
-```
-
-#################### Output & Characterisation for best model
-```{r output results for missclassification}
-
-######################Density plots
-#######All models
-metric_plot2<-melt(PhenoMC_Data, id=c(names(PhenoMC_Data[,-c(28:35)])))
-#Change colnames
-colnames(metric_plot2)<-c(names(PhenoMC_Data[,-c(28:35)]),"Model","Percentage")
-#Control vs FEP
-title = "Density Plots Stratified by Control and FEP"
-ggplot(metric_plot2, aes(Percentage, colour = Phenotype)) +
-  geom_density(alpha=0.01)+
-  facet_wrap(~ Model)+
-  ggtitle(title)
-ggsave(paste(figs_dir,project_id,project_name,"_Density_all_Pheno.png",sep=""))
-
-#Control vs Schizophrenia vs Other Psychoses
-title = "Density Plots Stratified by Control and Psychosis type"
-ggplot(metric_plot2, aes(Percentage, colour = ICD_DSM)) +
-  geom_density(alpha=0.01)+
-  facet_wrap(~ Model)+
-  ggtitle(title)
-ggsave(paste(figs_dir,project_id,project_name,"_Density_all_diag.png",sep=""))
-
-
-
-
-######Just Acc_1
-names(PhenoMC_Data)
-#Change colnames
-#Control vs FEP
-title = "Density Plot Stratified by Control and FEP"
-ggplot(PhenoMC_Data, aes(Acc_1_Gx, colour = Phenotype)) +
-  geom_density(alpha=0.01)+
-  ggtitle(title)
-ggsave(paste(figs_dir,project_id,project_name,"_1_Gx_Density_pheno.png",sep=""))
-
-#Control vs Schizophrenia vs Other Psychoses
-title = "Density Plots Stratified by Control and Psychosis type"
-ggplot(PhenoMC_Data, aes(Acc_1_Gx, colour = ICD_DSM)) +
-  geom_density(alpha=0.01)+
-  ggtitle(title)
-ggsave(paste(figs_dir,project_id,project_name,"_1_Gx_Density_diag.png",sep=""))
-
-
-####### 1_Gx characterisation with phenotypes. 
-
-##Categorical Variables
-#1. Ethnicity
-plot_fun_gx <-function(inputd,xax,yax,col,pfacets,ptitle) {
-  ggplot(inputd, aes_string(x=xax,y=yax, colour = col)) +
-    #geom_point() +  
-    geom_boxplot(notch=F)+
-    geom_jitter() + 
-    #coord_flip()+
-    facet_wrap(as.formula(paste("~", pfacets)))+
-    ggtitle(ptitle)  
-}
-
-PhenoMC_Data$Acc_6_Gx_PRS
-plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_1_Gx","ICD_DSM","Ethnicity","Titleofplot")
-plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_6_Gx_PRS","ICD_DSM","Ethnicity","Titleofplot")
-
-#2. Gender
-plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_1_Gx","ICD_DSM","Gender","Titleofplot")
-
-
-
-#3. Smoking 
-plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_1_Gx","ICD_DSM","Tobacco","Titleofplot")
-
-#4. Medication
-plot_fun_gx(PhenoMC_Data,"ICD_DSM","Acc_1_Gx","ICD_DSM","Medication","Titleofplot")
-plot_fun_gx(PhenoMC_Data,"Medication","Acc_1_Gx","Medication","ICD_DSM","Titleofplot")
-
-
-## Continues Variables
-#Create bins
-?quantile
-?cut
-PhenoMC_Data$Cuts<-cut(PhenoMC_Data$Acc_1_Gx,quantile(PhenoMC_Data$Acc_1_Gx,probs = c(0, 20, 40, 60, 80,100)/100))
-quantile(PhenoMC_Data$Acc_1_Gx,probs())
-quantile(x<-c(1:100,1:100),  probs = c(25, 50, 1, 2, 5, 10, 50, NA)/100)
-quantile(x<-c(0:100,0:100),  
-quantile(PhenoMC_Data$Acc_1_Gx,probs = c(0, 20, 40, 60, 80,100)/100)
-
-
-
-#5. Age 
-plot_fun_gx(PhenoMC_Data,"Cuts","Age","Cuts","ICD_DSM","Titleofplot")
-plot_fun_gx(PhenoMC_Data,"ICD_DSM","Age","ICD_DSM","Cuts","Titleofplot")
-ggplot(PhenoMC_Data, aes(Acc_1_Gx, colour = ICD_DSM)) +
-ggplot(PhenoMC_Data, aes(x=Cuts,y=Age, colour = ICD_DSM)) +
-  geom_jitter() +  
-  geom_boxplot(notch=F)+
-  coord_flip()+
-  ggtitle(title)
-
-
-
-#6. PRS (not imputed.)
-PhenoMC_Data_white<-filter(PhenoMC_Data,Ethnicity=="White")
-PhenoMC_Data_white$Cuts<-cut(PhenoMC_Data_white$Acc_1_Gx,quantile(PhenoMC_Data_white$Acc_1_Gx,probs = c(0, 20, 40, 60, 80,100)/100))
-plot_fun_gx(PhenoMC_Data_white,"ICD_DSM","PRS_0.1","ICD_DSM","Cuts","Titleofplot")
-PhenoMC_Data_white$Cuts
-
-cor(PhenoMC_Data_white$Acc_1_Gx,PhenoMC_Data_white$PanssScore)
-
-
-#6. PANSS
-
-#Filter out controls
-PhenoMC_Data_nocon<-filter(PhenoMC_Data,ICD_DSM!="Control")
-
-
-#Select model data
-pmodel<-"Acc_1_Gx"
-
-#get quantiles for cutting into equal groups
-Pquantiles<-quantile(PhenoMC_Data_nocon[,pmodel], probs = c(0,0.25,0.5,0.75,1))
-#round and 
-quantCuts<-as.vector(round(Pquantiles, 2)*100)[-1]
-#create cuts and add to DF
-PhenoMC_Data_nocon$Accuracy<-cut(PhenoMC_Data_nocon[,pmodel],Pquantiles,labels=quantCuts,include.lowest = T)
-
-
-
-
-pan<-c("PanssScore","PanssPositive","PanssNegative","PanssPsycho")
-
-panCuts<-"Accuracy"
-PanssDF<-PhenoMC_Data_nocon
-#PanssDF<-filter(PhenoMC_Data_nocon,Ethnicity == "White")
-n=1
-plot_fun_gx(PanssDF,panCuts,pan[n],panCuts,"ICD_DSM","Full PANSS vs binned Accuracy of sample classification")
-ggsave(paste(figs_dir,project_id,project_name,"_",pan[n],"_1_Gx.png",sep=""))
-n=2
-plot_fun_gx(PanssDF,panCuts,pan[n],panCuts,"ICD_DSM","PANSS Positive subscale vs binned Accuracy of sample classification")
-ggsave(paste(figs_dir,project_id,project_name,"_",pan[n],"_1_Gx.png",sep=""))
-n=3
-plot_fun_gx(PanssDF,panCuts,pan[n],panCuts,"ICD_DSM","PANSS Negative subscale vs binned Accuracy of sample classification")
-ggsave(paste(figs_dir,project_id,project_name,"_",pan[n],"_1_Gx.png",sep=""))
-n=4
-plot_fun_gx(PanssDF,panCuts,pan[n],panCuts,"ICD_DSM","PANSS Psychopathology subscale vs binned Accuracy of sample classification")
-ggsave(paste(figs_dir,project_id,project_name,"_",pan[n],"_1_Gx.png",sep=""))
-
-names(PanssDF)
-anovaDF<-PanssDF[complete.cases(PanssDF[,c(17,37)]),]
-str(anovaDF)
-dim(anovaDF)
-anovaDF$Accuracynum<-as.numeric(anovaDF$Accuracy)
-?aov
-#anova for Accuracy vs panns
-fit <- aov(PanssScore ~ Accuracy, data=anovaDF)
-fit$residuals
-
-t.test(anovaDF$Accuracynum,anovaDF$PanssPsycho)
-
-###corelation between panss and accuracy
-#make dfs 
-corDFScz<-filter(anovaDF,ICD_DSM =="Schizophrenia")
-corDFOPSy<-filter(anovaDF,ICD_DSM !="Schizophrenia")
-#calculate correlations
-cor(corDFScz$Acc_1_Gx,corDFScz$PanssPsycho)
-cor(corDFOPSy$Acc_1_Gx,corDFOPSy$PanssPsycho)
-t.test(anovaDF$Accuracynum,)
-filter(anovaDF$Accuracy)
-
-
-
-### Create Correlation Matrix? and plot? Make Table
-n=1
-anovaDF<-PanssDF[complete.cases(PanssDF[,pan[n]]),]
-#make dfs 
-corDFScz<-filter(anovaDF,ICD_DSM =="Schizophrenia")
-corDFOPSy<-filter(anovaDF,ICD_DSM !="Schizophrenia")
-#calculate correlations
-cor(corDFScz$Acc_1_Gx,corDFScz[,pan[n]])
-cor(corDFOPSy$Acc_1_Gx,corDFOPSy[,pan[n]])
-ggplot(corDFScz, aes_string(x="Acc_1_Gx",y=pan[n], colour = "ICD_DSM")) +
-  geom_point()
-
-
-n=2
-anovaDF<-PanssDF[complete.cases(PanssDF[,pan[n]]),]
-#make dfs 
-corDFScz<-filter(anovaDF,ICD_DSM =="Schizophrenia")
-corDFOPSy<-filter(anovaDF,ICD_DSM !="Schizophrenia")
-#calculate correlations
-cor(corDFScz$Acc_1_Gx,corDFScz[,pan[n]])
-cor(corDFOPSy$Acc_1_Gx,corDFOPSy[,pan[n]])
-ggplot(corDFScz, aes_string(x="Acc_1_Gx",y=pan[n], colour = "ICD_DSM")) +
-  geom_point()
-
-
-n=3
-anovaDF<-PanssDF[complete.cases(PanssDF[,pan[n]]),]
-#make dfs 
-corDFScz<-filter(anovaDF,ICD_DSM =="Schizophrenia")
-corDFOPSy<-filter(anovaDF,ICD_DSM !="Schizophrenia")
-#calculate correlations
-cor(corDFScz$Acc_1_Gx,corDFScz[,pan[n]])
-cor(corDFOPSy$Acc_1_Gx,corDFOPSy[,pan[n]])
-ggplot(corDFScz, aes_string(x="Acc_1_Gx",y=pan[n], colour = "ICD_DSM")) +
-  geom_point()
-
-n=4
-anovaDF<-PanssDF[complete.cases(PanssDF[,pan[n]]),]
-#make dfs 
-corDFScz<-filter(anovaDF,ICD_DSM =="Schizophrenia")
-corDFOPSy<-filter(anovaDF,ICD_DSM !="Schizophrenia")
-#calculate correlations
-cor(corDFScz$Acc_1_Gx,corDFScz[,pan[n]])
-cor(corDFOPSy$Acc_1_Gx,corDFOPSy[,pan[n]])
-ggplot(corDFScz, aes_string(x="Acc_1_Gx",y=pan[n], colour = "ICD_DSM")) +
-  geom_point()
-
-ggplot(corDFScz, aes_string(x="Acc_1_Gx",y=pan[n], colour = "icd10")) +
-  geom_point()
-
-ggplot(corDFOPSy, aes_string(x="Acc_1_Gx",y=pan[n], colour = "icd10")) +
-  geom_point()+
-  facet_wrap("icd10")
-
-
-
-dim(corDFScz)
-?anova
-fit <- aov(PanssPsycho ~ Accuracy, data=anovaDF)
-
-plant.mod1 = lm(PanssPsycho ~ Accuracy, data = corDFOPSy)
-plant.mod1 = lm(PanssPsycho ~ Accuracy, data = corDFScz)
-summary(plant.mod1)
-str(anova(plant.mod1))
-confint(plant.mod1)
-
-corDFScz = data.frame(Fitted = fitted(plant.mod1),
-  Residuals = resid(plant.mod1), Treatment = corDFScz$PanssPsycho)
-
-title = "Density Plots Stratified by Control and Psychosis type"
-ggplot(PhenoMC_Data, aes(Acc_1_Gx, colour = ICD_DSM)) +
-  geom_density(alpha=0.01)+
-  ggtitle(title)
-
-n=1
-ggplot(PanssDF, aes_string(x="Acc_1_Gx",y=pan[n], colour = "ICD_DSM")) +
-  geom_point() +
-  facet_wrap("ICD_DSM")
-
-
-
-
-#PRS vs PANSS
-
-table(is.na(PhenoMC_Data$PanssScore))
-table(is.na(PhenoMC_Data$PRS_0.01))
-table(is.na(pansNAremoved$PRS_0.05))
-
-pansNAremoved<-PhenoMC_Data[!is.na(PhenoMC_Data$PanssScore),]
-pansNAremovedNAPRS<-pansNAremoved[!is.na(pansNAremoved$PRS_0.05),]
-pansNAremovedNAPRS2<-filter(pansNAremovedNAPRS,ICD_DSM =="Schizophrenia")
-pansNAremovedNAPRS2<-filter(pansNAremovedNAPRS, Ethnicity =="White")
-cor(pansNAremovedNAPRS2$,pansNAremovedNAPRS2$PanssScore)
-
-cor(pansNAremovedNAPRS2$PanssScore,pansNAremovedNAPRS2[,c(18:27)])
-dim(pansNAremovedNAPRS2)
-
-(PhenoMC_Data$PanssScore)
-
-melt(pansNAremovedNAPRS)
-
-plot_fun_gx(pansNAremovedNAPRS,panCuts,pan[n],panCuts,"ICD_DSM","Panss score vs binned Accuracy of sample classification")
-
-scale()
-pansNAremovedNAPRS[,c(18:27)]<-scale(pansNAremovedNAPRS[,c(18:27)], center = TRUE, scale = TRUE)
-?scale
-
-metric_plot3<-melt(pansNAremovedNAPRS, id=c(names(pansNAremovedNAPRS[,-c(18:27)])))
-
-names(metric_plot3)
-ggplot(metric_plot3, aes(x=value,y=PanssScore, colour = ICD_DSM)) +
-  geom_point()+
-  facet_wrap("variable")
-  
-geom_jitter() +  
-  geom_boxplot(notch=F)+
-  coord_flip()+
-  ggtitle(title)
-
-
-```
-
-
-## Under Construction ##########################################################################################
-```{r}
-###################################################################################
-## Under Construction
-#pick model and name
-input_model=glmnet_fit_b
-input_model_name="glm"
-#use model to predict training data
-predict_fit<-predict.train(input_model, newdata = GX_DF_full_adj)
-cmatrix<-confusionMatrix(predict_fit, GX_DF_full_adj$Phenotype)
-matrixout<-data.frame(c(cmatrix$overall,cmatrix$byClass))
-#save metrics
-write.table(t(matrixout), file=paste(output_dir,project_id,project_name,"glmnet_confusionout.csv",sep=""),row.names=F,quote=FALSE,sep = ",")
-
-
-#make dataframes
-model_strat_confuse_df<-create_table_df(GX_DF_full_adj,27,predict_fit)
-#plot tables
-table_fun_ml(model_strat_confuse_df,input_model_name)
-
-
-#modellist<- list(HF_glm=p1_glm,HD_glm=p2_glm)
-
-#p1data<-p1_glm$pred
-#str(p1_glm$pred)
-#table(p1data$lambda)
-
-#p1filter<-filter(p1data,alpha== 0.1)
-#p1filter<-filter(p1filter,lambda < 0.0105)
-dim(p1filter)
-table(p1filter$rowIndex)
-
-smallp1<-p1filter[!duplicated(p1filter$rowIndex),]
-dim(smallp1)
-smallsort<-arrange(smallp1,rowIndex)
-
-cbind(smallsort[,1:3],expressionRFE$Phenotype)
-
-
-
-title = "Density Plots Stratified by Control and FEP"
-ggplot(metric_plot2, aes(Percentage, colour = Phenotype)) +
-  geom_density(alpha=0.01)+
-  facet_wrap(~ )+
-  ggtitle(title)
-
-
-```
